analysis.ipynb: Açıklamalar Türkçe ve daha anlaşılır olacak şekilde yeniden yazıldı; başlıklar ve görselleştirme metinleri düzeltildi

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,26 +4,25 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# NPM Kompleks Ag Analizi (Top 200)\n",
+        "# NPM Kompleks Ağ Analizi (Top 200)\n",
         "\n",
-        "Bu defter, populer Top 200 NPM paketini yonlu bir ag (Dependent -> Dependency) olarak modelleyip, in-degree ve betweenness merkeziyet metrikleriyle yapisal riski inceler. Kurulum adimlarini atliyoruz; gerekli paketlerin yüklü oldugu varsayilir.\n",
+        "Bu defter, popüler Top 200 NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree ve betweenness merkeziyet metrikleriyle yapısal riski inceler. Kurulum adımlarını atlıyoruz; gerekli paketlerin yüklü olduğu varsayılır.\n",
         "\n",
-        "Contents:\n",
-        "- Veri: `data/top_200.txt` (varsa otomatik kullanilir)\n",
-        "- Ag: NetworkX DiGraph, kenarlar Dependent -> Dependency\n",
+        "- Veri: `data/top_200.txt` (varsa otomatik kullanılır)\n",
+        "- Ağ: NetworkX DiGraph, kenarlar Dependent → Dependency\n",
         "- Metrikler: In-degree, Betweenness\n",
-        "- Ciktilar: `results/` altina kaydedilir\n",
-        "- Gorsellestirme: tum ag ve sadece Top 200 indüklenmis alt-ag\n",
+        "- Çıktılar: `results/` altına kaydedilir\n",
+        "- Görselleştirme: Tüm ağ ve sadece Top 200 indüklenmiş alt-ağ\n",
         "\n",
-        "Not: Buyuk N (ornegin 20k) icin bagimlilik cekimi ve betweenness hesabi maliyetlidir; bu defter Top 200 icin optimize edilmistir."
+        "Not: Büyük N (ör. 20k) için bağımlılık çekimi ve betweenness hesabı maliyetlidir; bu defter Top 200 için optimize edilmiştir."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1) Icel Aktarim ve Parametreler\n",
-        "Yardimci fonksiyonlar `src/analyze_npm_network.py` icindedir. Varsayilan `OUTDIR` = `results/`."
+        "## 1) İçe Aktarım ve Parametreler\n",
+        "Yardımcı fonksiyonlar `src/analyze_npm_network.py` içindedir. Varsayılan `OUTDIR` = `results/`."
       ]
     },
     {
@@ -36,7 +35,7 @@
         "import sys\n",
         "import os\n",
         "\n",
-        "# src klasorunu import yoluna ekle\n",
+        "# src klasörünü import yoluna ekle\n",
         "sys.path.append(str(Path('src').resolve()))\n",
         "\n",
         "import networkx as nx\n",
@@ -53,7 +52,7 @@
         "# Tercihen sabit Top 200 listesi\n",
         "INPUT_LIST = Path('data/top_200.txt')\n",
         "USE_INPUT_LIST = INPUT_LIST.exists()\n",
-        "TOP_N = 200  # fallback to fetching if needed\n",
+        "TOP_N = 200  # gerekirse API'den çekmek için yedek\n",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
         "OUTDIR"
@@ -63,8 +62,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2) Top 200 Paketleri Yukle\n",
-        "`data/top_200.txt` varsa kullan; yoksa API'lerden Top-N cek."
+        "## 2) Top 200 Paketleri Yükle\n",
+        "`data/top_200.txt` varsa kullan; yoksa API’lerden Top‑N çek."
       ]
     },
     {
@@ -75,10 +74,10 @@
       "source": [
         "if USE_INPUT_LIST:\n",
         "    top_packages = read_list(INPUT_LIST)\n",
-        "    print(f'Loaded {len(top_packages)} from {INPUT_LIST}')\n",
+        "    print(f'{INPUT_LIST} dosyasından {len(top_packages)} paket yüklendi')\n",
         "else:\n",
         "    top_packages = fetch_top_packages(TOP_N)\n",
-        "    print(f'Fetched {len(top_packages)} from API(s)')\n",
+        "    print(f'API’lerden {len(top_packages)} paket çekildi')\n",
         "len(top_packages), top_packages[:20]"
       ]
     },
@@ -86,8 +85,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3) Yonlu Agi Kur\n",
-        "Dugumler paketler; kenarlar Dependent -> Dependency. Varsayilan olarak sadece `dependencies` kullanilir."
+        "## 3) Yönlü Ağı Kur\n",
+        "Düğümler paketler; kenarlar Dependent → Dependency. Varsayılan olarak yalnızca `dependencies` kullanılır."
       ]
     },
     {
@@ -105,8 +104,8 @@
       "metadata": {},
       "source": [
         "## 4) Merkeziyet Metrikleri\n",
-        "- In-Degree: Dugume gelen kenar sayisi -> etkilenebilecek alan\n",
-        "- Betweenness: En kisa yollardaki aracilik -> tek hata noktasi riski"
+        "- In-Degree: Düğüme gelen kenar → etkilenebilecek alan\n",
+        "- Betweenness: En kısa yollardaki aracılık → tek hata noktası riski"
       ]
     },
     {
@@ -124,8 +123,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5) Ilk 15 (Tum Dugumler ve Kohort)\n",
-        "In-degree ve betweenness acisindan liderlere hizli bakis (tum dugumler ve sadece Top 200)."
+        "## 5) İlk 15 (Tüm Düğümler ve Kohort)\n",
+        "In-degree ve betweenness açısından liderlere hızlı bakış (tüm düğümler ve sadece Top 200)."
       ]
     },
     {
@@ -145,8 +144,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6) Sonuclari Kaydet\n",
-        "Kenarlar, metrikler ve kisa rapor `results/` altina yazilir."
+        "## 6) Sonuçları Kaydet\n",
+        "Kenarlar, metrikler ve kısa rapor `results/` altına yazılır."
       ]
     },
     {
@@ -166,8 +165,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 7) Hizi Dogrulama\n",
-        "Rastgele bazi paketler icin registry'deki dependencies ile graf kenarlarini karsilastir. Surum farklarindan kaynakli kucuk farkliliklar olabilir."
+        "## 7) Hızlı Doğrulama\n",
+        "Rastgele bazı paketler için registry’deki `dependencies` ile graf kenarlarını karşılaştıralım. Küçük farklar sürüm farklılıklarından kaynaklanabilir."
       ]
     },
     {
@@ -205,8 +204,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 8) Tum Ag Cizimi (Top 200 + Bagimliliklar)\n",
-        "Top 200 dugumleri turuncu, digerleri mavi; dugum boyutu in-degree ile olceklenir."
+        "## 8) Tüm Ağ Çizimi (Top 200 + Bağımlılıklar)\n",
+        "Top 200 düğümleri turuncu, diğerleri mavi; düğüm boyutu in-degree ile ölçeklenir."
       ]
     },
     {
@@ -226,22 +225,22 @@
         "    plt.figure(figsize=(12, 9), dpi=150)\n",
         "    nx.draw_networkx_edges(G, pos, arrows=False, width=0.5, alpha=0.25)\n",
         "    nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=0.85, linewidths=0.2, edgecolors='#444444')\n",
-        "    plt.title('NPM Top 200 Dependency Network (Full)')\n",
+        "    plt.title('NPM Top 200 Bağımlılık Ağı (Tümü)')\n",
         "    plt.axis('off')\n",
         "    out_png = OUTDIR / 'network_full_top200.png'\n",
         "    out_svg = OUTDIR / 'network_full_top200.svg'\n",
         "    plt.tight_layout(); plt.savefig(out_png); plt.savefig(out_svg)\n",
         "    (out_png, out_svg)\n",
         "except ModuleNotFoundError:\n",
-        "    print('matplotlib not found; skipping drawing.')\n"
+        "    print('matplotlib bulunamadı; görselleştirme atlandı.')\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 9) Sadece Top 200 Induklenmis Alt-Ag\n",
-        "Sadece Top 200 dugumleri; okunabilirlik icin az sayida dugum varsa etiketler gosterilir."
+        "## 9) Sadece Top 200 (İndüklenmiş Alt-Ağ)\n",
+        "Sadece Top 200 düğümleri; düğüm sayısı azsa etiketleri göster."
       ]
     },
     {
@@ -263,25 +262,25 @@
         "    nx.draw_networkx_nodes(H, posH, node_size=node_sizes_H, node_color=node_colors_H, alpha=0.9, linewidths=0.2, edgecolors='#444444')\n",
         "    if H.number_of_nodes() <= 60:\n",
         "        nx.draw_networkx_labels(H, posH, font_size=6)\n",
-        "    plt.title('NPM Top 200 Dependency Network (Top-Only)')\n",
+        "    plt.title('NPM Top 200 Bağımlılık Ağı (Sadece Top 200)')\n",
         "    plt.axis('off')\n",
         "    out_png2 = OUTDIR / 'network_top200_only.png'\n",
         "    out_svg2 = OUTDIR / 'network_top200_only.svg'\n",
         "    plt.tight_layout(); plt.savefig(out_png2); plt.savefig(out_svg2)\n",
         "    (out_png2, out_svg2)\n",
         "except ModuleNotFoundError:\n",
-        "    print('matplotlib not found; skipping drawing.')\n"
+        "    print('matplotlib bulunamadı; görselleştirme atlandı.')\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 10) Varsayimlar ve Sinirlamalar\n",
-        "- Kenar yonu Dependent -> Dependency; yayilim analizi icin uygundur.\n",
-        "- Yalnizca `dependencies` dahil; `peerDependencies` varsayilan olarak disarida.\n",
-        "- Global dependent sayilari dahil degil; ecosyste.ms verisi eklenebilir.\n",
-        "- En guncel surum kullanilir; eski surumlerde bagimliliklar farkli olabilir."
+        "## 10) Varsayımlar ve Sınırlamalar\n",
+        "- Kenar yönü Dependent → Dependency; yayılım analizi için uygundur.\n",
+        "- Varsayılan olarak yalnızca `dependencies` dahil; `peerDependencies` talebe göre eklenebilir.\n",
+        "- Küresel dependent sayıları dahil değildir; ecosyste.ms’ten eklenebilir.\n",
+        "- En güncel sürüm kullanılır; eski sürümlerde bağımlılıklar farklı olabilir."
       ]
     }
   ],
@@ -298,3 +297,4 @@
   "nbformat": 4,
   "nbformat_minor": 5
 }
+
