Analiz: out-degree desteği eklendi (metrik, rapor, CSV). Notebook out-degree hesaplar ve İlk 10 grafiğini (in/out/between) üretir.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -105,6 +105,7 @@
       "source": [
         "## 4) Merkeziyet Metrikleri\n",
         "- In-Degree: Düğüme gelen kenar → etkilenebilecek alan\n",
+        "- Out-Degree: Düğümün dış bağımlılık sayısı → bağımlılık zinciri uzunluğu\n",
         "- Betweenness: En kısa yollardaki aracılık → tek hata noktası riski"
       ]
     },
@@ -114,7 +115,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "in_deg, btw = compute_metrics(G)\n",
+        "in_deg, out_deg, btw = compute_metrics(G)\n",
         "nodes = G.number_of_nodes(); edges = G.number_of_edges()\n",
         "nodes, edges"
       ]
@@ -155,8 +156,8 @@
       "outputs": [],
       "source": [
         "save_edges(G, OUTDIR / 'edges.csv')\n",
-        "save_metrics(in_deg, btw, top_set, OUTDIR / 'metrics.csv')\n",
-        "save_report(in_deg, btw, top_set, OUTDIR / 'report.md')\n",
+        "save_metrics(in_deg, out_deg, btw, top_set, OUTDIR / 'metrics.csv')\n",
+        "save_report(in_deg, out_deg, btw, top_set, OUTDIR / 'report.md')\n",
         "(OUTDIR / 'top_packages.txt').write_text(os.linesep.join(top_packages), encoding='utf-8')\n",
         "sorted(OUTDIR.iterdir())"
       ]
@@ -304,23 +305,34 @@
         "    names_in = [n for n,_ in top10_in][::-1]",
         "    vals_in = [v for _,v in top10_in][::-1]",
         "",
+        "    # Out-Degree ilk 10 (tüm düğümler)",
+        "    top10_out = sorted(out_deg.items(), key=lambda kv: kv[1], reverse=True)[:10]",
+        "    names_out = [n for n,_ in top10_out][::-1]",
+        "    vals_out = [v for _,v in top10_out][::-1]",
+        "",
         "    # Betweenness ilk 10 (tüm düğümler)",
         "    top10_btw = sorted(btw.items(), key=lambda kv: kv[1], reverse=True)[:10]",
         "    names_btw = [n for n,_ in top10_btw][::-1]",
         "    vals_btw = [v for _,v in top10_btw][::-1]",
         "",
-        "    fig, axes = plt.subplots(1, 2, figsize=(16, 6), dpi=150)",
+        "    fig, axes = plt.subplots(1, 3, figsize=(20, 6), dpi=150)",
         "    # In-Degree grafiği",
         "    axes[0].barh(names_in, vals_in, color='tab:blue')",
-        "    axes[0].set_title('In-Degree İlk 10 (Tüm Düğümler)')",
+        "    axes[0].set_title('In-Degree İlk 10')",
         "    axes[0].set_xlabel('In-Degree')",
         "    axes[0].tick_params(axis='y', labelsize=8)",
         "",
-        "    # Betweenness grafiği",
-        "    axes[1].barh(names_btw, vals_btw, color='tab:orange')",
-        "    axes[1].set_title('Betweenness İlk 10 (Tüm Düğümler)')",
-        "    axes[1].set_xlabel('Betweenness')",
+        "    # Out-Degree grafiği",
+        "    axes[1].barh(names_out, vals_out, color='tab:green')",
+        "    axes[1].set_title('Out-Degree İlk 10')",
+        "    axes[1].set_xlabel('Out-Degree')",
         "    axes[1].tick_params(axis='y', labelsize=8)",
+        "",
+        "    # Betweenness grafiği",
+        "    axes[2].barh(names_btw, vals_btw, color='tab:orange')",
+        "    axes[2].set_title('Betweenness İlk 10')",
+        "    axes[2].set_xlabel('Betweenness')",
+        "    axes[2].tick_params(axis='y', labelsize=8)",
         "",
         "    plt.tight_layout()",
         "    out_combo = OUTDIR / 'top10_leaders.png'",
@@ -328,23 +340,9 @@
         "    print(out_combo)",
         "",
         "    # Ayrı ayrı da kaydedelim",
-        "    plt.figure(figsize=(8,6), dpi=150)",
-        "    plt.barh(names_in, vals_in, color='tab:blue')",
-        "    plt.title('In-Degree İlk 10 (Tüm Düğümler)')",
-        "    plt.xlabel('In-Degree')",
-        "    plt.tight_layout()",
-        "    out_in = OUTDIR / 'top10_in_degree.png'",
-        "    plt.savefig(out_in)",
-        "    print(out_in)",
-        "",
-        "    plt.figure(figsize=(8,6), dpi=150)",
-        "    plt.barh(names_btw, vals_btw, color='tab:orange')",
-        "    plt.title('Betweenness İlk 10 (Tüm Düğümler)')",
-        "    plt.xlabel('Betweenness')",
-        "    plt.tight_layout()",
-        "    out_btw = OUTDIR / 'top10_betweenness.png'",
-        "    plt.savefig(out_btw)",
-        "    print(out_btw)",
+        "    plt.figure(figsize=(8,6), dpi=150); plt.barh(names_in, vals_in, color='tab:blue'); plt.title('In-Degree İlk 10'); plt.xlabel('In-Degree'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_in_degree.png')",
+        "    plt.figure(figsize=(8,6), dpi=150); plt.barh(names_out, vals_out, color='tab:green'); plt.title('Out-Degree İlk 10'); plt.xlabel('Out-Degree'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_out_degree.png')",
+        "    plt.figure(figsize=(8,6), dpi=150); plt.barh(names_btw, vals_btw, color='tab:orange'); plt.title('Betweenness İlk 10'); plt.xlabel('Betweenness'); plt.tight_layout(); plt.savefig(OUTDIR / 'top10_betweenness.png')",
         "except ModuleNotFoundError:",
         "    print('matplotlib bulunamadı; görselleştirme atlandı.')"
       ]
