Notebook: her çalıştırmada Top-N API'den çekilecek şekilde güncellendi; data/ ve npm-leaderboard/ kaldırıldı

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -8,7 +8,7 @@
         "\n",
         "Bu defter, popüler Top 200 NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree ve betweenness merkeziyet metrikleriyle yapısal riski inceler. Kurulum adımlarını atlıyoruz; gerekli paketlerin yüklü olduğu varsayılır.\n",
         "\n",
-        "- Veri: `data/top_200.txt` (varsa otomatik kullanılır)\n",
+        "- Veri: API'den çekilen Top N paket (varsayılan 200)\n",
         "- Ağ: NetworkX DiGraph, kenarlar Dependent → Dependency\n",
         "- Metrikler: In-degree, Betweenness\n",
         "- Çıktılar: `results/` altına kaydedilir\n",
@@ -50,8 +50,6 @@
         ")\n",
         "\n",
         "# Tercihen sabit Top 200 listesi\n",
-        "INPUT_LIST = Path('data/top_200.txt')\n",
-        "USE_INPUT_LIST = INPUT_LIST.exists()\n",
         "TOP_N = 200  # gerekirse API'den çekmek için yedek\n",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
@@ -72,12 +70,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "if USE_INPUT_LIST:\n",
-        "    top_packages = read_list(INPUT_LIST)\n",
-        "    print(f'{INPUT_LIST} dosyasından {len(top_packages)} paket yüklendi')\n",
-        "else:\n",
-        "    top_packages = fetch_top_packages(TOP_N)\n",
-        "    print(f'API’lerden {len(top_packages)} paket çekildi')\n",
+        "top_packages = fetch_top_packages(TOP_N)",
+        "print(f'API’lerden {len(top_packages)} paket çekildi')",
         "len(top_packages), top_packages[:20]"
       ]
     },
