Performans: tek Session ile bağımlılık çekimi, büyük graf’larda betweenness için örneklemeli hesap; TOP_N=1000 olarak ayarlandı; görseller PNG+SVG sonuç dizinine kaydediliyor

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -64,7 +64,7 @@
         ")\n",
         "\n",
         "# Tercihen sabit Top 200 listesi\n",
-        "TOP_N = 200  # gerekirse API'den çekmek için yedek\n",
+        "TOP_N = 1000  # gerekirse API'den çekmek için yedek\n",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
         "OUTDIR"
@@ -168,7 +168,9 @@
         "## 4) Merkeziyet Metrikleri\n",
         "- In-Degree: Düğüme gelen kenar → etkilenebilecek alan\n",
         "- Out-Degree: Düğümün dış bağımlılık sayısı → bağımlılık zinciri uzunluğu\n",
-        "- Betweenness: En kısa yollardaki aracılık → tek hata noktası riski"
+        "- Betweenness: En kısa yollardaki aracılık → tek hata noktası riski\n",
+        "\n",
+        "Not: Büyük graf’larda betweenness yaklaşık örnekleme (k) ile hızlandırılır."
       ]
     },
     {
