Notebook adımları: Liderler metin+grafik tek adımda birleştirildi; takip eden adımlar yeniden numaralandırıldı ve açıklama eklendi

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -150,8 +150,8 @@
       "id": "2d3995db",
       "metadata": {},
       "source": [
-        "## 5) Liderler: İlk 10 (Metin)",
-        "In-degree / Out-degree / Betweenness ilk 10 metin özeti."
+        "## 5) Liderler: İlk 10 (Özet + Görselleştirme)",
+        "Bu adımda in-degree / out-degree / betweenness için ilk 10’u hem metin olarak özetler hem de bar grafikleri PNG+SVG olarak results/ klasörüne kaydeder."
       ]
     },
     {
@@ -173,7 +173,7 @@
       "id": "0fbc6256",
       "metadata": {},
       "source": [
-        "## 7) Sonuçları Kaydet",
+        "## 6) Sonuçları Kaydet",
         "",
         "Kenarlar, metrikler ve kısa rapor `results/` altına yazılır."
       ]
@@ -197,7 +197,7 @@
       "id": "ae03b462",
       "metadata": {},
       "source": [
-        "## 8) Hızlı Doğrulama",
+        "## 7) Hızlı Doğrulama",
         "",
         "Rastgele bazı paketler için registry’deki `dependencies` ile graf kenarlarını karşılaştıralım. Küçük farklar sürüm farklılıklarından kaynaklanabilir."
       ]
@@ -239,7 +239,7 @@
       "id": "e913f0ca",
       "metadata": {},
       "source": [
-        "## 9) Tüm Ağ Çizimi (Top N + Bağımlılıklar)",
+        "## 8) Tüm Ağ Çizimi (Top N + Bağımlılıklar)",
         "",
         "Top N düğümleri turuncu, diğerleri mavi; düğüm boyutu in-degree ile ölçeklenir."
       ]
@@ -277,7 +277,7 @@
       "id": "ce54238c",
       "metadata": {},
       "source": [
-        "## 10) Sadece Top N (İndüklenmiş Alt-Ağ)",
+        "## 9) Sadece Top N (İndüklenmiş Alt-Ağ)",
         "",
         "Sadece Top N düğümleri; düğüm sayısı azsa etiketleri göster."
       ]
@@ -317,7 +317,7 @@
       "id": "aeef7ca6",
       "metadata": {},
       "source": [
-        "## 15) Varsayımlar ve Sınırlamalar",
+        "## 14) Varsayımlar ve Sınırlamalar",
         "",
         "- Kenar yönü Dependent → Dependency; yayılım analizi için uygundur.",
         "",
@@ -326,16 +326,6 @@
         "- Küresel dependent sayıları dahil değildir; ecosyste.ms’ten eklenebilir.",
         "",
         "- En güncel sürüm kullanılır; eski sürümlerde bağımlılıklar farklı olabilir."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "621a35ce",
-      "metadata": {},
-      "source": [
-        "## 6) Liderler: İlk 10 (Görselleştirme)",
-        "",
-        "In-degree ve betweenness için ilk 10 paketi çubuk grafiklerle gösterelim."
       ]
     },
     {
@@ -403,7 +393,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 11) Derece Dağılımları (Histogram)",
+        "## 10) Derece Dağılımları (Histogram)",
         "",
         "In-degree ve out-degree dağılımlarını inceleyelim (log ölçek)."
       ]
@@ -437,7 +427,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 12) Korelasyonlar (Dağılım Grafikleri)",
+        "## 11) Korelasyonlar (Dağılım Grafikleri)",
         "",
         "In-degree vs Betweenness ve In-degree vs Out-degree."
       ]
@@ -473,7 +463,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 13) Bağlanırlık ve Bileşenler",
+        "## 12) Bağlanırlık ve Bileşenler",
         "",
         "Zayıf bağlanırlık bileşenleri ve temel ağ istatistikleri."
       ]
@@ -505,7 +495,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 14) Köprü Kenarlar (Edge Betweenness)",
+        "## 13) Köprü Kenarlar (Edge Betweenness)",
         "",
         "En yüksek edge betweenness değerine sahip 10 kenarı çıkaralım."
       ]
