Notebook optimizasyonu: açıklamalar kapsamlı TR; Top 200 kalıntıları temizlendi; src yolu kaldırıldı; başlıklar ve metinler Top N için düzeltildi

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -7,25 +7,19 @@
       "source": [
         "# NPM Kompleks Ağ Analizi (Top N)",
         "",
+        "Bu defter, popüler Top N NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree / out-degree / betweenness merkeziyet metrikleriyle yapısal riski inceler.",
         "",
+        "Amaç:",
+        "- Bağımlılık ağındaki konuma dayalı kritik düğümleri belirlemek",
+        "- Zincirleme etki potansiyelini (cascading impact) nicel olarak görmek",
+        "- Sonuçları tekrar üretilebilir şekilde görselleştirmek ve raporlamak",
         "",
-        "Bu defter, popüler Top N NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree ve betweenness merkeziyet metrikleriyle yapısal riski inceler. Kurulum adımlarını atlıyoruz; gerekli paketlerin yüklü olduğu varsayılır.",
-        "",
-        "",
-        "",
-        "- Veri: API'den çekilen Top N paket (varsayılan 200)",
-        "",
-        "- Ağ: NetworkX DiGraph, kenarlar Dependent → Dependency",
-        "",
-        "- Metrikler: In-degree, Betweenness",
-        "",
-        "- Çıktılar: `results/` altına kaydedilir",
-        "",
-        "- Görselleştirme: Tüm ağ ve sadece Top N indüklenmiş alt-ağ",
-        "",
-        "",
-        "",
-        "Not: Büyük N (ör. 20k) için bağımlılık çekimi ve betweenness hesabı maliyetlidir; bu defter Top N için optimize edilmiştir.",
+        "Metodoloji (özet):",
+        "- Veri: Liste her çalıştırmada API’lerden çekilir (ecosyste.ms / npm registry / npms.io yedekli)",
+        "- Ağ: NetworkX DiGraph (kenar: Dependent → Dependency)",
+        "- Metrikler: In-Degree (gelen), Out-Degree (giden), Betweenness",
+        "- Performans: Büyük graf’larda betweenness için örneklemeli hesap",
+        "- Çıktılar: Tüm sonuçlar `results/` klasörüne yazılır (CSV/MD/JSON + PNG/SVG)",
         "",
         "Varsayılan Top N = 1000 (değiştirilebilir)."
       ]
@@ -35,9 +29,7 @@
       "id": "57e59b20",
       "metadata": {},
       "source": [
-        "## 1) İçe Aktarım ve Parametreler",
-        "",
-        "Yardımcı fonksiyonlar `src/analyze_npm_network.py` içindedir. Varsayılan `OUTDIR` = `results/`."
+        "## 1) İçe Aktarım ve Parametreler\n\nYardımcı fonksiyonlar `analysis_helpers.py` içindedir. Varsayılan `OUTDIR` = `results/`."
       ]
     },
     {
@@ -52,7 +44,6 @@
         "import os\n",
         "\n",
         "# src klasörünü import yoluna ekle\n",
-        "sys.path.append(str(Path('src').resolve()))\n",
         "\n",
         "import networkx as nx\n",
         "from analysis_helpers import (\n",
@@ -65,7 +56,7 @@
         "    read_list,\n",
         ")\n",
         "\n",
-        "# Tercihen sabit Top 200 listesi\n",
+        "# Parametreler\n",
         "TOP_N = 1000  # gerekirse API'den çekmek için yedek\n",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
@@ -79,7 +70,7 @@
       "source": [
         "## 2) Top N Paketleri Yükle",
         "",
-        "`data/top_200.txt` varsa kullan; yoksa API’lerden Top‑N çek."
+        "Liste her çalıştırmada API’lerden çekilir (indirme sayısına göre sıralı)."
       ]
     },
     {
@@ -262,7 +253,7 @@
         "    plt.figure(figsize=(12, 9), dpi=150)\n",
         "    nx.draw_networkx_edges(G, pos, arrows=False, width=0.5, alpha=0.25)\n",
         "    nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=0.85, linewidths=0.2, edgecolors='#444444')\n",
-        "    plt.title('NPM Top 200 Bağımlılık Ağı (Tümü)')\n",
+        "    plt.title('NPM Top N Bağımlılık Ağı (Tümü)')\n",
         "    plt.axis('off')\n",
         "    out_png = OUTDIR / 'network_full_top200.png'\n",
         "    out_svg = OUTDIR / 'network_full_top200.svg'\n",
@@ -302,7 +293,7 @@
         "    nx.draw_networkx_nodes(H, posH, node_size=node_sizes_H, node_color=node_colors_H, alpha=0.9, linewidths=0.2, edgecolors='#444444')\n",
         "    if H.number_of_nodes() <= 60:\n",
         "        nx.draw_networkx_labels(H, posH, font_size=6)\n",
-        "    plt.title('NPM Top 200 Bağımlılık Ağı (Sadece Top 200)')\n",
+        "    plt.title('NPM Top N Bağımlılık Ağı (Sadece Top N)')\n",
         "    plt.axis('off')\n",
         "    out_png2 = OUTDIR / 'network_top200_only.png'\n",
         "    out_svg2 = OUTDIR / 'network_top200_only.svg'\n",
