İsimlendirme: ağ görselleri 'top200' -> 'topN'; notebook ve README güncellendi; mevcut dosyalar yeniden adlandırıldı

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -5,22 +5,22 @@
       "id": "8567c601",
       "metadata": {},
       "source": [
-        "# NPM Kompleks Ağ Analizi (Top N)",
-        "",
-        "Bu defter, popüler Top N NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree / out-degree / betweenness merkeziyet metrikleriyle yapısal riski inceler.",
-        "",
-        "Amaç:",
-        "- Bağımlılık ağındaki konuma dayalı kritik düğümleri belirlemek",
-        "- Zincirleme etki potansiyelini (cascading impact) nicel olarak görmek",
-        "- Sonuçları tekrar üretilebilir şekilde görselleştirmek ve raporlamak",
-        "",
-        "Metodoloji (özet):",
-        "- Veri: Liste her çalıştırmada API’lerden çekilir (ecosyste.ms / npm registry / npms.io yedekli)",
-        "- Ağ: NetworkX DiGraph (kenar: Dependent → Dependency)",
-        "- Metrikler: In-Degree (gelen), Out-Degree (giden), Betweenness",
-        "- Performans: Büyük graf’larda betweenness için örneklemeli hesap",
-        "- Çıktılar: Tüm sonuçlar `results/` klasörüne yazılır (CSV/MD/JSON + PNG/SVG)",
-        "",
+        "# NPM Kompleks Ağ Analizi (Top N)\n",
+        "\n",
+        "Bu defter, popüler Top N NPM paketini yönlü bir ağ (Dependent → Dependency) olarak modelleyip, in-degree / out-degree / betweenness merkeziyet metrikleriyle yapısal riski inceler.\n",
+        "\n",
+        "Amaç:\n",
+        "- Bağımlılık ağındaki konuma dayalı kritik düğümleri belirlemek\n",
+        "- Zincirleme etki potansiyelini (cascading impact) nicel olarak görmek\n",
+        "- Sonuçları tekrar üretilebilir şekilde görselleştirmek ve raporlamak\n",
+        "\n",
+        "Metodoloji (özet):\n",
+        "- Veri: Liste her çalıştırmada API’lerden çekilir (ecosyste.ms / npm registry / npms.io yedekli)\n",
+        "- Ağ: NetworkX DiGraph (kenar: Dependent → Dependency)\n",
+        "- Metrikler: In-Degree (gelen), Out-Degree (giden), Betweenness\n",
+        "- Performans: Büyük graf’larda betweenness için örneklemeli hesap\n",
+        "- Çıktılar: Tüm sonuçlar `results/` klasörüne yazılır (CSV/MD/JSON + PNG/SVG)\n",
+        "\n",
         "Varsayılan Top N = 1000 (değiştirilebilir)."
       ]
     },
@@ -29,7 +29,9 @@
       "id": "57e59b20",
       "metadata": {},
       "source": [
-        "## 1) İçe Aktarım ve Parametreler\n\nYardımcı fonksiyonlar `analysis_helpers.py` içindedir. Varsayılan `OUTDIR` = `results/`."
+        "## 1) İçe Aktarım ve Parametreler\n",
+        "\n",
+        "Yardımcı fonksiyonlar `analysis_helpers.py` içindedir. Varsayılan `OUTDIR` = `results/`."
       ]
     },
     {
@@ -57,7 +59,7 @@
         ")\n",
         "\n",
         "# Parametreler\n",
-        "TOP_N = 1000  # gerekirse API'den çekmek için yedek\n",
+        "TOP_N = 100  # gerekirse API'den çekmek için yedek\n",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
         "OUTDIR"
@@ -68,8 +70,8 @@
       "id": "55d98b52",
       "metadata": {},
       "source": [
-        "## 2) Top N Paketleri Yükle",
-        "",
+        "## 2) Top N Paketleri Yükle\n",
+        "\n",
         "Liste her çalıştırmada API’lerden çekilir (indirme sayısına göre sıralı)."
       ]
     },
@@ -90,8 +92,8 @@
       "id": "38ec8e56",
       "metadata": {},
       "source": [
-        "## 3) Yönlü Ağı Kur",
-        "",
+        "## 3) Yönlü Ağı Kur\n",
+        "\n",
         "Düğümler paketler; kenarlar Dependent → Dependency. Varsayılan olarak yalnızca `dependencies` kullanılır."
       ]
     },
@@ -111,16 +113,16 @@
       "id": "58466719",
       "metadata": {},
       "source": [
-        "## 4) Merkeziyet Metrikleri",
-        "",
-        "- In-Degree: Düğüme gelen kenar → etkilenebilecek alan",
-        "",
-        "- Out-Degree: Düğümün dış bağımlılık sayısı → bağımlılık zinciri uzunluğu",
-        "",
-        "- Betweenness: En kısa yollardaki aracılık → tek hata noktası riski",
-        "",
-        "",
-        "",
+        "## 4) Merkeziyet Metrikleri\n",
+        "\n",
+        "- In-Degree: Düğüme gelen kenar → etkilenebilecek alan\n",
+        "\n",
+        "- Out-Degree: Düğümün dış bağımlılık sayısı → bağımlılık zinciri uzunluğu\n",
+        "\n",
+        "- Betweenness: En kısa yollardaki aracılık → tek hata noktası riski\n",
+        "\n",
+        "\n",
+        "\n",
         "Not: Büyük graf’larda betweenness yaklaşık örnekleme (k) ile hızlandırılır."
       ]
     },
@@ -141,7 +143,7 @@
       "id": "2d3995db",
       "metadata": {},
       "source": [
-        "## 5) Liderler: İlk 10 (Özet + Görselleştirme)",
+        "## 5) Liderler: İlk 10 (Özet + Görselleştirme)\n",
         "Bu adımda in-degree / out-degree / betweenness için ilk 10’u hem metin olarak özetler hem de bar grafikleri PNG+SVG olarak results/ klasörüne kaydeder."
       ]
     },
@@ -164,8 +166,8 @@
       "id": "0fbc6256",
       "metadata": {},
       "source": [
-        "## 6) Sonuçları Kaydet",
-        "",
+        "## 6) Sonuçları Kaydet\n",
+        "\n",
         "Kenarlar, metrikler ve kısa rapor `results/` altına yazılır."
       ]
     },
@@ -188,8 +190,8 @@
       "id": "ae03b462",
       "metadata": {},
       "source": [
-        "## 7) Hızlı Doğrulama",
-        "",
+        "## 7) Hızlı Doğrulama\n",
+        "\n",
         "Rastgele bazı paketler için registry’deki `dependencies` ile graf kenarlarını karşılaştıralım. Küçük farklar sürüm farklılıklarından kaynaklanabilir."
       ]
     },
@@ -230,8 +232,8 @@
       "id": "e913f0ca",
       "metadata": {},
       "source": [
-        "## 8) Tüm Ağ Çizimi (Top N + Bağımlılıklar)",
-        "",
+        "## 8) Tüm Ağ Çizimi (Top N + Bağımlılıklar)\n",
+        "\n",
         "Top N düğümleri turuncu, diğerleri mavi; düğüm boyutu in-degree ile ölçeklenir."
       ]
     },
@@ -255,8 +257,8 @@
         "    nx.draw_networkx_nodes(G, pos, node_size=node_sizes, node_color=node_colors, alpha=0.85, linewidths=0.2, edgecolors='#444444')\n",
         "    plt.title('NPM Top N Bağımlılık Ağı (Tümü)')\n",
         "    plt.axis('off')\n",
-        "    out_png = OUTDIR / 'network_full_top200.png'\n",
-        "    out_svg = OUTDIR / 'network_full_top200.svg'\n",
+        "    out_png = OUTDIR / 'network_full_topN.png'\n",
+        "    out_svg = OUTDIR / 'network_full_topN.svg'\n",
         "    plt.tight_layout(); plt.savefig(out_png); plt.savefig(out_svg)\n",
         "    (out_png, out_svg)\n",
         "except ModuleNotFoundError:\n",
@@ -268,8 +270,8 @@
       "id": "ce54238c",
       "metadata": {},
       "source": [
-        "## 9) Sadece Top N (İndüklenmiş Alt-Ağ)",
-        "",
+        "## 9) Sadece Top N (İndüklenmiş Alt-Ağ)\n",
+        "\n",
         "Sadece Top N düğümleri; düğüm sayısı azsa etiketleri göster."
       ]
     },
@@ -295,8 +297,8 @@
         "        nx.draw_networkx_labels(H, posH, font_size=6)\n",
         "    plt.title('NPM Top N Bağımlılık Ağı (Sadece Top N)')\n",
         "    plt.axis('off')\n",
-        "    out_png2 = OUTDIR / 'network_top200_only.png'\n",
-        "    out_svg2 = OUTDIR / 'network_top200_only.svg'\n",
+        "    out_png2 = OUTDIR / 'network_topN_only.png'\n",
+        "    out_svg2 = OUTDIR / 'network_topN_only.svg'\n",
         "    plt.tight_layout(); plt.savefig(out_png2); plt.savefig(out_svg2)\n",
         "    (out_png2, out_svg2)\n",
         "except ModuleNotFoundError:\n",
@@ -308,14 +310,14 @@
       "id": "aeef7ca6",
       "metadata": {},
       "source": [
-        "## 14) Varsayımlar ve Sınırlamalar",
-        "",
-        "- Kenar yönü Dependent → Dependency; yayılım analizi için uygundur.",
-        "",
-        "- Varsayılan olarak yalnızca `dependencies` dahil; `peerDependencies` talebe göre eklenebilir.",
-        "",
-        "- Küresel dependent sayıları dahil değildir; ecosyste.ms’ten eklenebilir.",
-        "",
+        "## 14) Varsayımlar ve Sınırlamalar\n",
+        "\n",
+        "- Kenar yönü Dependent → Dependency; yayılım analizi için uygundur.\n",
+        "\n",
+        "- Varsayılan olarak yalnızca `dependencies` dahil; `peerDependencies` talebe göre eklenebilir.\n",
+        "\n",
+        "- Küresel dependent sayıları dahil değildir; ecosyste.ms’ten eklenebilir.\n",
+        "\n",
         "- En güncel sürüm kullanılır; eski sürümlerde bağımlılıklar farklı olabilir."
       ]
     },
@@ -384,8 +386,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 10) Derece Dağılımları (Histogram)",
-        "",
+        "## 10) Derece Dağılımları (Histogram)\n",
+        "\n",
         "In-degree ve out-degree dağılımlarını inceleyelim (log ölçek)."
       ]
     },
@@ -418,8 +420,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 11) Korelasyonlar (Dağılım Grafikleri)",
-        "",
+        "## 11) Korelasyonlar (Dağılım Grafikleri)\n",
+        "\n",
         "In-degree vs Betweenness ve In-degree vs Out-degree."
       ]
     },
@@ -454,8 +456,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 12) Bağlanırlık ve Bileşenler",
-        "",
+        "## 12) Bağlanırlık ve Bileşenler\n",
+        "\n",
         "Zayıf bağlanırlık bileşenleri ve temel ağ istatistikleri."
       ]
     },
@@ -486,8 +488,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 13) Köprü Kenarlar (Edge Betweenness)",
-        "",
+        "## 13) Köprü Kenarlar (Edge Betweenness)\n",
+        "\n",
         "En yüksek edge betweenness değerine sahip 10 kenarı çıkaralım."
       ]
     },
@@ -521,3 +523,4 @@
   "nbformat": 4,
   "nbformat_minor": 5
 }
+
