Notebook: matplotlib yoksa otomatik kurulum hücresi eklendi (görsellerin üretilmesi için)

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -59,10 +59,28 @@
         ")\n",
         "\n",
         "# Parametreler\n",
-        "TOP_N = 100  # gerekirse API'den çekmek için yedek\n",
+        "TOP_N = 1000  # gerekirse API'den çekmek için yedek\n",
         "OUTDIR = Path('results')\n",
         "OUTDIR.mkdir(parents=True, exist_ok=True)\n",
         "OUTDIR"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Matplotlib kontrol/kurulum (gerekirse)",
+        "try:",
+        "    import matplotlib  # noqa: F401",
+        "    print('matplotlib hazır')",
+        "except ModuleNotFoundError:",
+        "    import sys, subprocess",
+        "    print('matplotlib eksik; kuruluyor...')",
+        "    subprocess.check_call([sys.executable, '-m', 'pip', 'install', 'matplotlib'])",
+        "    import matplotlib  # noqa: F401",
+        "    print('kurulum tamam')"
       ]
     },
     {
@@ -384,6 +402,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "01795e98",
       "metadata": {},
       "source": [
         "## 10) Derece Dağılımları (Histogram)\n",
@@ -394,6 +413,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "0208ea30",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -418,6 +438,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "81a79980",
       "metadata": {},
       "source": [
         "## 11) Korelasyonlar (Dağılım Grafikleri)\n",
@@ -428,6 +449,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "588549f6",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -454,6 +476,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "cd947cca",
       "metadata": {},
       "source": [
         "## 12) Bağlanırlık ve Bileşenler\n",
@@ -464,6 +487,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "720e2d8b",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -486,6 +510,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "106b32f1",
       "metadata": {},
       "source": [
         "## 13) Köprü Kenarlar (Edge Betweenness)\n",
@@ -496,6 +521,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "df21fd03",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -523,4 +549,3 @@
   "nbformat": 4,
   "nbformat_minor": 5
 }
-
